.k8s/nlp/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
  labels:
    app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
    git/branch: ${BRANCH_NAME}
    git/commit: ${COMMIT}
    gitlab/job: "${JOB_ID}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
  template:
    metadata:
      labels:
        app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
    spec:
      containers:
        - image: ${IMAGE_NAME}:${IMAGE_TAG}
          name: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
          ports:
            - containerPort: ${PORT}
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 300
            periodSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: ${PORT}
            initialDelaySeconds: 300
            periodSeconds: 5
