.k8s/nlp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
  labels:
    app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
    git/branch: ${BRANCH_NAME}
    git/commit: ${COMMIT}
    gitlab/job: "${JOB_ID}"
spec:
  selector:
    app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
  ports:
    - port: ${PORT}
      name: ${CONTEXT}
