.k8s/nlp/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
  labels:
    app: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
    git/branch: ${BRANCH_NAME}
    git/commit: ${COMMIT}
    gitlab/job: "${JOB_ID}"
spec:
  rules:
  - host: ${NLP_HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${K8S_NAMESPACE}-${CONTEXT}-${BRANCH_HASH}
          servicePort: ${PORT}
